# pre-commit-nocommit

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_hooks/: check_nocommit.py
