[metadata]
name = pre_commit_nocommit
version = 0.0.1
description = Pre-commit hook to stop commits with nocommit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/pre-commit-hooks
author = Fran Hrzenjak
author_email = fran.hrzenjak@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-nocommit = pre_commit_hooks.check_nocommit:main

[bdist_wheel]
universal = True
